UI-2788  Platform UI is not fit the width of screen if content of activities are too long - fix for ie

--- a/webapp/resources/src/main/webapp/skin/less/Activity/Style.less
+++ b/webapp/resources/src/main/webapp/skin/less/Activity/Style.less
@@ -457,6 +457,9 @@
 			border-right: 6px solid transparent;
 			right: 0px;
 		}
+		.content {
+			word-wrap: break-word;
+		}
 	}
 }	
 
